# seminar_simulator

./: .gitignore  1.txt  5000.txt  BatSensor.cpp  Battery.cpp  CMakeLists.txt  ChargeVehicle.cpp  Collidable.cpp  Draw.cpp  ElitesMap.cpp  ExplorerVehicle.cpp  Genome.cpp  GroundSensor.cpp  LightSensor.cpp  LightSource.cpp  LightVehicle.cpp  Mboa.cpp  Placeable.cpp  Plotter.cpp  ProxSensor.cpp  ProxVehicle.cpp  Sensor.cpp  Vehicle.cpp  VehicleSensor.cpp  Wall.cpp  World.cpp  constants.h  genome_charger1.txt  genome_explorer1.txt  main.cpp  structureCharger  structureExplorer
anns/: ann_5charges_per_timestep.txt  circle_plus_still.txt
elmaps/: 10_0.txt  10_1.txt  10_10.txt  10_11.txt  10_12.txt  10_13.txt  10_14.txt  10_15.txt  10_16.txt  10_17.txt  10_18.txt  10_19.txt  10_2.txt  10_3.txt  10_4.txt  10_5.txt  10_6.txt  10_7.txt  10_8.txt  10_9.txt  15_0.txt  15_1.txt  15_10.txt  15_11.txt  15_12.txt  15_13.txt  15_14.txt  15_15.txt  15_16.txt  15_17.txt  15_18.txt  15_19.txt  15_2.txt  15_20.txt  15_21.txt  15_3.txt  15_4.txt  15_5.txt  15_6.txt  15_7.txt  (+37 more)
header/: BatSensor.h  Battery.h  ChargeVehicle.h  Collidable.h  Controllable.h  Draw.h  ElitesMap.h  ExplorerVehicle.h  Genome.h  GroundSensor.h  LightSensor.h  LightSource.h  LightVehicle.h  Mboa.h  Placeable.h  ProxSensor.h  ProxVehicle.h  Sensor.h  Vehicle.h  VehicleSensor.h  Wall.h  World.h  matplotlib.hpp  matplotlibcpp.h  plotter.h  types.h
network/: structure_10_3_3_3
results/: data_10_0.txt  data_10_1.txt  data_10_10.txt  data_10_11.txt  data_10_12.txt  data_10_13.txt  data_10_14.txt  data_10_15.txt  data_10_16.txt  data_10_17.txt  data_10_18.txt  data_10_19.txt  data_10_2.txt  data_10_3.txt  data_10_4.txt  data_10_5.txt  data_10_6.txt  data_10_7.txt  (+64 more)
(+35 files in other folders)
